KubernetesTest-main/apps/authority/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: authority
  namespace: authority
spec:
  hosts:
  - "authority.cb-interview.com"
  gateways:
  - authority-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: authority
        port:
          number: 8080
    rewrite:
      uri: "/"
